# spider

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ETHICAL_USE.md  GUARDRAILS.md  LICENSE  Makefile  Modelfile  NOTICE  PLAN.md  README.md  SECURITY.md  pyproject.toml
.Jules/: palette.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  security_policy_notice.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  security.yml
.jules/: bolt.md
docs/: advanced-dspy-design.md  architecture.md  dspy-engine.md  index.md  intelligence.md  open-source-release.md  parallelism.md  quickstart.md  safety.md  testing.md  tools.md  tui.md
lab/: docker-compose.yml
lab/kali-tools/: Dockerfile
plan/: development-guide.md  plan.md  review.md  todo.md
scratch/: check_refine_sig.py  test_dspy_tool_sig.py  test_dspy_tool_sig_final.py  test_instantiation.py  test_runner_mapping_fix.py  test_runner_mapping_fix_final.py  test_runner_mapping_fix_pure.py  test_scope.py  test_scope_unrestricted.py  test_truncation.py  verify_modules.py  verify_tool_sanitization.py
src/spider/: __init__.py  banner.py  cli.py  config.py  models.py  observability.py  schemas.py
src/spider/nodes/: enum.py  (+7 more)
tests/: test_cli.py  test_models.py
tests/test_engine/: test_no_tool_modules.py  test_node_factory.py  test_orchestrator_topology_selection.py  test_runner.py  test_scan_mode.py  test_weaver_grounding.py
tests/test_integration/: test_lab.py
(+54 files in other folders)
