[project]
name = "spider"
version = "0.1.0"
description = "Symbiotic Pentesting Investigation & DSPy Exploitation Runtime -- DSPy-native pentesting framework"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<4.0"
authors = [
    { name = "Dan, Strategic Automation" }
]
dependencies = [
    "dspy>=3.1.3,<4.0.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "textual>=0.50.0,<1.0.0",
    "rich>=13.0,<15.0",
    "python-libnmap>=0.7.3,<1.0.0",
    "requests>=2.31,<3.0",
    "httpx>=0.27,<1.0",
    "tenacity>=8.0,<9.0",
    "docker>=7.0,<8.0",
    "questionary>=2.0,<3.0",
    "loguru>=0.7,<1.0",
    "langfuse>=2.0,<3.0",
    "openinference-instrumentation-dspy>=0.1.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=5.0,<7.0",
    "ruff>=0.4.0,<1.0",
]

[project.scripts]
spider = "spider.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["tests/", "lab/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/spider"]

[tool.uv.sources]
# Workspace sources: the project itself is always editable
spider = { workspace = true }
